package ObserversModel;

public interface Observer {
    void update();
}
